# ManagementSystem

./: .env.example  .env.example_test  .gitignore  Dockerfile  Management system.postman_collection.json  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
alembic/: env.py
backend/: alembic.ini  cli.py  main.py  seed.py
backend/alembic/: env.py
backend/alembic/versions/2026/02/: 28_1950_34_ecfef26c78dd_create_tables.py
backend/api/: __init__.py
backend/api/api_v1/articles/: __init__.py  models.py
backend/api/api_v1/auth/: __init__.py  models.py
backend/api/api_v1/users/: __init__.py  models.py
backend/api/articles/: enums.py  models.py  routers.py  schemas.py  services.py
backend/api/auth/: README.md  dependencies.py  routers.py  schemas.py  services.py  utils.py
backend/api/users/: __init__.py  dependencies.py  models.py  routers.py  schemas.py  services.py
backend/core/: config.py
backend/core/mixins/: __init__.py  id_pk.py  timestamp_mixins.py
backend/core/models/: __init__.py  base.py  db_helper.py
backend/tests/: article_test.py  auth_test.py  conftest.py  user_test.py
backend/utils/: __init__.py  id_pk.py  pagination.py
