[tool.poetry]
name = "managementsystem"
version = "0.1.0"
description = ""
authors = ["mist258 <natalia.kolchuk@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.133.0"
uvicorn = {extras = ["standart"], version = "^0.41.0"}
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.13.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.47"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
