[tool.poetry]
name = "managementsystem"
version = "0.1.0"
description = ""
authors = ["mist258 <natalia.kolchuk@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.133.0"
uvicorn = {extras = ["standart"], version = "^0.41.0"}
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.13.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.47"}
asyncpg = "^0.31.0"
alembic = "^1.18.4"
pyjwt = {extras = ["crypto"], version = "^2.11.0"}
bcrypt = "^5.0.0"
python-multipart = "^0.0.22"


[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
pytest = "^9.0.2"
isort = "^8.0.1"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
